modified swagger docs
